publish: Make api sign up link live.
generated from commit 4392cb8cc028056c3bb987d78098e37b8aabc1e4

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div id="toc">
       </div>
         <ul class="toc-footer">
-            <li><a href='#'>Sign Up for a Developer Key</a></li>
+            <li><a href='https://www.apollo.io/app/#/settings/integrations/api'>Sign Up for an API Key</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
