publish: add phoen number to documentation
generated from commit 65248faf9cbf152d4dfb0aeb6b063349771234f9

--- a/index.html
+++ b/index.html
@@ -422,6 +422,31 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
 <td>The address string for this contact, Apollo will intelligently infer the city, state, and country from your address</td>
 <td>&ldquo;San Francisco&rdquo;</td>
 </tr>
+<tr>
+<td>direct_phone</td>
+<td>The direct dial phone for this contact. If the contact already has a direct dial, this overwrites it. If a contact does not already have a direct dial, this ADDS a new direct dial on top of existing phone numbers</td>
+<td>&ldquo;123-456-7890&rdquo;</td>
+</tr>
+<tr>
+<td>corporate_phone</td>
+<td>The corporate phone for this contact. If the contact already has a corporate phone, this overwrites it. If a contact does not already have a corporate phone, this ADDS a new corporate phone on top of existing phone numbers</td>
+<td>&ldquo;123-456-7890&rdquo;</td>
+</tr>
+<tr>
+<td>mobile_phone</td>
+<td>The mobile phone for this contact. If the contact already has a mobile phone, this overwrites it. If a contact does not already have a mobile phone, this ADDS a new mobile phone on top of existing phone numbers</td>
+<td>&ldquo;123-456-7890&rdquo;</td>
+</tr>
+<tr>
+<td>home_phone</td>
+<td>The home phone for this contact. If the contact already has a home phone, this overwrites it. If a contact does not already have a home phone, this ADDS a new home phone on top of existing phone numbers</td>
+<td>&ldquo;123-456-7890&rdquo;</td>
+</tr>
+<tr>
+<td>other_phone</td>
+<td>Phone of unknown type for this contact. If the contact already has phone of unknown type, this overwrites it. If a contact does not already have phone of unknown type, this ADDS a new phone on top of existing phone numbers</td>
+<td>&ldquo;123-456-7890&rdquo;</td>
+</tr>
 </tbody></table>
 
 <h2 id="searching-for-contacts">Searching for contacts</h2>
