publish: contact_updated_at as sort
generated from commit d566e3730c2de24f26d16dfc8b303754e64cea2c

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
 </tr>
 <tr>
 <td>sort_by_field</td>
-<td>Possible values: &ldquo;contact_last_activity_date&rdquo;, &ldquo;contact_email_last_opened_at&rdquo;, &ldquo;contact_email_last_clicked_at&rdquo;, or &ldquo;contact_created_at&rdquo;</td>
+<td>Possible values: &ldquo;contact_last_activity_date&rdquo;, &ldquo;contact_email_last_opened_at&rdquo;, &ldquo;contact_email_last_clicked_at&rdquo;, &ldquo;contact_created_at&rdquo;, or &ldquo;contact_updated_at&rdquo;</td>
 </tr>
 <tr>
 <td>sort_ascending</td>
