publish: get list of custom fields
generated from commit 8febd4d894a289a0224c1889140c662eeee6f46b

--- a/index.html
+++ b/index.html
@@ -824,6 +824,12 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
 
 <p><code class="prettyprint">GET https://api.apollo.io/v1/labels</code></p>
 
+<h2 id="get-a-list-of-all-custom-fields">Get a list of all Custom Fields</h2>
+<pre class="highlight shell"><code>curl -X GET -H <span class="s2">"Content-Type: application/json"</span> -H <span class="s2">"Cache-Control: no-cache"</span> <span class="s2">"https://api.apollo.io/v1/typed_custom_fields?api_key=YOUR_API_KEY_HERE"</span>
+</code></pre>
+
+<p><code class="prettyprint">GET https://api.apollo.io/v1/typed_custom_fields</code></p>
+
       </div>
       <div class="dark-box">
           <div class="lang-selector">
